--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <h2>Cat Photos</h2>
                 <!--paragraph contains a link-->
                 <p>Click here to view more <a href="https://unsplash.com/s/photos/cat" target="_blank">cat photos</a>.</p>
-                <a href="https://unsplash.com/s/photos/cat" target="_blank"><img src="/home/neha/Desktop/freeCodeCamp/Responsive_web_design/Catphotoapp/cat.jpg" alt="Orange Cat" height="230" width="230"></a>
+                <a href="https://unsplash.com/s/photos/cat" target="_blank"><img src="cat.jpg" alt="Orange Cat" height="230" width="230"></a>
             </section>
             <section>
                 <h2>Cat Lists</h2>
@@ -22,7 +22,7 @@
                         <li>lasagna</li>
                     </ul>
                     <figure>
-                        <img src="/home/neha/Desktop/freeCodeCamp/Responsive_web_design/Catphotoapp/lasagna.jpg" alt="A slice of lasagna on a plate" width="230" height="230">
+                        <img src="lasagna.jpg" alt="A slice of lasagna on a plate" width="230" height="230">
                         <figcaption>Cats <em>love</em> Lasagna</figcaption>
                     </figure>
                 <h3>Top 3 things cats hate:</h3>
@@ -32,7 +32,7 @@
                     <li>other cats</li>
                   </ol>
                   <figure>
-                      <img src="/home/neha/Desktop/freeCodeCamp/Responsive_web_design/Catphotoapp/catfight.jpg" alt="cats fighting" width="230" height="230">
+                      <img src="catfight.jpg" alt="cats fighting" width="230" height="230">
                       <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
                   </figure>
                     
